# DVD-swarm

./: .gitignore  .pre-commit-config.yaml  Makefile  Readme.md  banner.txt  generate_swarm.py  install.sh  pyproject.toml  status.sh
.github/workflows/: swarm-ci.yml
companion-computer/: Dockerfile  start-companion.sh
companion-computer/conf/: dhcpd.conf  dnsmasq.conf  hostapd_wpa2.conf  mavlink-router.conf  sshd_config
companion-computer/interface/: app.py  config.json  mavlink_connection.py  models.py  rtsp.py  video.py
companion-computer/interface/routes/: camera.py  config.py  logs.py  telemetry.py  wifi.py
companion-computer/interface/templates/: cameraStream.html  flightController.html  flightLogs.html  index.html  login.html  wifiNetwork.html
companion-computer/interface/tests/: serialDevices.py
companion-computer/lite/: Dockerfile
flight-controller/: Dockerfile  drone.parm  init.sh
ground-control-station/: entrypoint.sh  init  launch_qgc.sh
ground-control-station/conf/: QGroundControl.ini  wpa_supplicant_wep.conf  wpa_supplicant_wpa2.conf
ground-control-station/missions/: waypoints_custom_zigzag_square.txt
ground-control-station/stages/: arm-and-takeoff.py  autopilot-flight.py  post-flight-analysis.py  return-to-land.py
missions/: waypoints.txt
simulator/: damn-vulnerable-drone.launch
simulator/assets/worlds/: damn-vulnerable-drone.world
simulator/gzweb/: README.md  coarse_meshes.sh  deploy.sh  get_local_models.py  webify_models.py  webify_models_v2.py
simulator/lite/: start-lite.sh
simulator/mgmt/: app.py  models.py
(+95 files in other folders)
