[project]
name = "dvd-swarm"
version = "0.1.0"
description = "100-instance headless DVD litemode swarm for dataset generation"
readme = "Readme.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "xTomWray" },
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.4",
    "pre-commit>=3.7",
    "pyyaml>=6.0",
    "types-pyyaml>=6.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["generate_swarm"]

# ── Ruff ──────────────────────────────────────────────────────────────────────

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["."]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "ARG", "SIM"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ── Mypy ──────────────────────────────────────────────────────────────────────

[tool.mypy]
strict = true
python_version = "3.12"

[[tool.mypy.overrides]]
module = "yaml.*"
ignore_missing_imports = true

# ── Pytest ────────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"

# ── Coverage ──────────────────────────────────────────────────────────────────

[tool.coverage.run]
source = ["."]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
